--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
           script: |
               cd /home/dotamonster/agency_db
               git pull
-              docker kill clue/json-server
-              docker run -d -p 1337:1337 -v source.json:/data/db.json clue/json-server
+              docker rm $(docker stop $(docker ps -a -q --filter ancestor=clue/json-server --format="{{.ID}}"))
+              docker run -d -p 1337:80 -v /home/dotamonster/agency_db/source.json:/data/db.json clue/json-server
