--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,7 @@ jobs:
           port: ${{ secrets.PORT }}
           passphrase: ${{ secrets.VPASSPHRASE }}
           script: |
-              whoami
+              cd /home/dotamonster/agency_db
+              git pull
+              docker rm $(docker stop $(docker ps -a -q --filter ancestor=clue/json-server --format="{{.ID}}"))
+              docker run -d -p 1337:80 -v /home/dotamonster/agency_db/source.json:/data/db.json clue/json-server
